# levenshtein-myers-simd

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  levenshtein_benchmark.cpp
inc/: levenshtein_myers.hpp
src/: CMakeLists.txt  levenshtein_myers.hpp  levenshtein_myers_128x1.cpp  levenshtein_myers_16x8.cpp  levenshtein_myers_32x1.cpp  levenshtein_myers_32x4.cpp  levenshtein_myers_64x1.cpp  levenshtein_myers_64x2.cpp  levenshtein_myers_8x16.cpp  levenshtein_myers_anyx1.cpp
test/: CMakeLists.txt  fuzz_levenshtein_myers.cpp  test_levenshtein_myers_16x8.cpp  test_levenshtein_myers_32x4.cpp  test_levenshtein_myers_64x2.cpp
